fix(modal): fix more styling issues on desktop after fix on mobile

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -24,6 +24,7 @@ $g-c-modal-backdrop-z: 30 !default;
 $g-c-modal-context-z: 40 !default;
 $g-c-modal-z: 50 !default;
 
+
 /* Component
    ========================================================================== */
 
@@ -37,7 +38,7 @@ $g-c-modal-z: 50 !default;
 	transform: translate(-50%, -4rem);
 	transition: visibility 0s linear 0.2s, opacity 0.2s linear, transform 0.2s ease-in-out;
 	visibility: hidden;
-	max-width: 100vw;
+	width: 100%;
 	z-index: $g-c-modal-context-z;
 
 	&.c-modal-context--visible {
@@ -52,17 +53,79 @@ $g-c-modal-z: 50 !default;
 	background-color: #FFF;
 	display: flex;
 	flex-direction: column;
-	width: calc(100vw - 4rem);
-	max-width: calc(100vw - 4rem);
+	width: calc(100% - 8rem);
 	z-index: $g-c-modal-z;
 
+	/* Sizes
+   ========================================================================== */
+
+	&.c-modal--extra-large {
+		width: 140rem;
+	}
+
+	&.c-modal--large {
+		width: 88rem;
+	}
+
+	&.c-modal--medium {
+		width: 66rem;
+	}
+
+	&.c-modal--small {
+		width: 44rem;
+	}
+
+	&.c-modal--fullscreen {
+		height: calc(100% - #{$c-modal-padding-vertical * 2});
+		max-height: none;
+		max-width: none;
+		width: calc(100% - #{$c-modal-padding-horizontal * 2});
+	}
+
+	&.c-modal--fullwidth {
+		max-width: 66rem;
+		width: calc(100% - #{$c-modal-padding-horizontal * 2});
+	}
+
+	&.c-modal--height-auto {
+		height: auto;
+	}
+
+	&.c-modal--scrollable {
+		max-height: calc(100% - #{$c-modal-padding-vertical * 2});
+	}
+
+	&:not(.c-modal--scrollable) {
+		overflow: visible;
+
+		.c-modal__body {
+			overflow: visible;
+		}
+	}
+
 	@media (min-width: $g-bp2) {
-		box-shadow:
-			0 0 1.6rem rgba($c-modal-shadow-color,0.25),
-			0 0 2.4rem rgba($c-modal-shadow-color,0.15),
-			0 0 3.2rem rgba($c-modal-shadow-color,0.05);
+		box-shadow: 0 0 1.6rem rgba($c-modal-shadow-color, 0.25),
+		0 0 2.4rem rgba($c-modal-shadow-color, 0.15),
+		0 0 3.2rem rgba($c-modal-shadow-color, 0.05);
 		border-radius: $c-modal-border-radius;
-		width: calc(100vw - 8rem);
+		margin: auto;
+	}
+}
+
+// higher specificity than specific classes for sizes
+.c-modal-context {
+	.c-modal {
+
+		@media (max-width: $g-bp2) {
+			&,
+			&.c-modal--fullscreen,
+			&.c-modal--scrollable {
+				width: 100vw;
+				max-width: 100vw;
+				height: 100%;
+				max-height: 100%;
+			}
+		}
 	}
 }
 
@@ -131,55 +194,6 @@ $g-c-modal-z: 50 !default;
 	flex: 1 1 auto;
 	overflow: auto;
 	padding: $c-modal-padding-vertical $c-modal-padding-horizontal;
-}
-
-/* Sizes
-   ========================================================================== */
-
-.c-modal--extra-large {
-	width: 140rem;
-}
-
-.c-modal--large {
-	width: 88rem;
-}
-
-.c-modal--medium {
-	width: 66rem;
-}
-
-.c-modal--small {
-	width: 44rem;
-}
-
-.c-modal--fullscreen {
-	height: calc(100% - #{$c-modal-padding-vertical * 2});
-	max-height: none;
-	max-width: none;
-	width: calc(100% - #{$c-modal-padding-horizontal * 2});
-}
-
-.c-modal--fullwidth {
-	max-width: 66rem;
-	width: calc(100% - #{$c-modal-padding-horizontal * 2});
-}
-
-.c-modal--height-auto {
-	height: auto;
-}
-
-.c-modal {
-	&.c-modal--scrollable {
-		max-height: calc(100% - #{$c-modal-padding-vertical * 2});
-	}
-
-	&:not(.c-modal--scrollable) {
-		overflow: visible;
-
-		.c-modal__body {
-			overflow: visible;
-		}
-	}
 }
 
 /* Backdrop
